--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
       content="Web site created using create-react-app"
     />
    
-    <title>React App</title>
+    <!-- <title>React App</title> -->
+    <title>%REACT_APP_LOCATION%</title>
+
   </head>
   <body>
+    <h1></h1>
    
     <div id="root" > </div>
    
